<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResetPasswordActivity">
    <TextView
        android:id="@+id/btn_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_pass"
        android:textSize="35sp"
        android:textColor="@color/title"
        android:layout_marginTop="79dp"
        android:layout_centerHorizontal="true">

    </TextView>

    <RelativeLayout
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reset_pass"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/OTP"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_type_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_otp"
            android:layout_marginTop="51dp"
            android:hint="@string/set_new_pass"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_type_new_pass"
            android:layout_marginTop="51dp"
            android:hint="@string/retype_new_pass"
            android:textSize="24sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_send_email"
        style="@style/Button_forgot_pass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/blue_btn"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20dp" />
</RelativeLayout>