<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Home Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <!-- R.L wrap 3 thứ -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp">

                <!-- Home Profile Photo, click dẫn tới Profile Fragment -->
                <ImageView
                    android:id="@+id/btn_home_profile"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:layout_toStartOf="@id/btn_notify"
                    android:src="@drawable/user" />

                <!-- Home Notify Icon, click dẫn tới Notify Activity -->
                <RelativeLayout
                    android:id="@+id/btn_notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/ic_notify"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/notification"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignStart="@id/ic_notify"
                        android:layout_alignTop="@id/ic_notify"
                        android:background="@drawable/ic_badge_circle"
                        android:gravity="center"
                        android:paddingHorizontal="1dp"
                        android:text=" "
                        android:textSize="11sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </RelativeLayout>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appbar"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/title"
            android:textSize="35sp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_sub_title"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/sub_title">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        >
        <LinearLayout
            android:id="@+id/A1_A2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <LinearLayout
                android:id="@+id/A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/light_white"
                android:clickable="true"
                >
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:src="@drawable/xea1"
                    >

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A1"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A1_des"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    >
                </TextView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:background="@color/light_white"
                android:clickable="true"
                >
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:src="@drawable/xea2">

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A2"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A2_des"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    >
                </TextView>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/B1_B2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:id="@+id/B1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/light_white"
                android:clickable="true"
                >
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:src="@drawable/xeb1"
                    >

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B1"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B1_des"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:background="@color/light_white"
                android:clickable="true">
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:src="@drawable/xeb2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B2"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B2_des"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    >
                </TextView>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>


</RelativeLayout>