<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:src="@drawable/ic_close"
        app:tint="@color/black"
        tools:ignore="SpeakableTextPresentCheck">

    </ImageButton>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:text="@string/forgot_pass_tite"
        android:textColor="@color/title"
        android:textSize="35sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/forgot_pass_sub_title"
        android:textAlignment="center"
        android:textColor="@color/sub_title"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sub_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="93dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck"></EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send_email"
        style="@style/Button_forgot_pass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/blue_btn"
        android:gravity="center_vertical|center_horizontal"
        android:text="Gửi email"
        android:textColor="@color/white"
        android:textSize="20dp">

    </Button>


</RelativeLayout>